methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase: error: not found: value growFlowers
		growFlowers();
                ^FlowerCase:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime15.FlowerCase'
override def run() {
             ^